--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,98 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link href="https://fonts.googleapis.com/css?family=Lilita+One|Public+Sans&display=swap" rel="stylesheet">
 
+    <script type='text/javascript' src='https://www.gstatic.com/charts/loader.js'></script>
+
+    <script type='text/javascript'>
+     google.charts.load('current', {
+       'packages': ['geochart'],
+       'mapsApiKey': 'AIzaSyDL0sPhoIQ-w6JtRXkZiIwc2izy2m26cPE'
+     });
+     google.charts.setOnLoadCallback(drawMarkersMap);
+
+      function drawMarkersMap() {
+      var data = google.visualization.arrayToDataTable([
+        ['County',   'Exceedances'],
+        ['Alameda County',      2761477],
+        // ['Alpine County',     1324110,    181.76],
+        // ['Amador County',     1324110,    181.76],
+        // ['Butte County',     1324110,    181.76],
+        // ['Calaveras County',     1324110,    181.76],
+        // ['Colusa County	',     1324110,    181.76],
+        // ['Contra Costa County',     1324110,    181.76],
+        // ['Del Norte County',     1324110,    181.76],
+        // ['El Dorado County',     1324110,    181.76],
+        // ['Fresno County',     1324110,    181.76],
+        // ['Glenn County',     1324110,    181.76],
+        // ['Humboldt County',     1324110,    181.76],
+        // ['Imperial County',     1324110,    181.76],
+        // ['Inyo County',     1324110,    181.76],
+        // ['Kern County	',     1324110,    181.76],
+        // ['Kings County',     1324110,    181.76],
+        // ['Lake County',     1324110,    181.76],
+        // ['Lassen County',     1324110,    181.76],
+        // ['Los Angeles County',     1324110,    181.76],
+        // ['Madera County',     1324110,    181.76],
+        // ['Marin County',     1324110,    181.76],
+        // ['Mariposa County',     1324110,    181.76],
+        // ['Mendocino County',     1324110,    181.76],
+        // ['Merced County',     1324110,    181.76],
+        // ['Modoc County',     1324110,    181.76],
+        // ['Mono County	',     1324110,    181.76],
+        // ['Monterey County',     1324110,    181.76],
+        // ['Napa County',     1324110,    181.76],
+        // ['Nevada County',     1324110,    181.76],
+        // ['Orange County',     1324110,    181.76],
+        // ['Placer County',     1324110,    181.76],
+        // ['Plumas County',     1324110,    181.76],
+        // ['Riverside County',     1324110,    181.76],
+        // ['Sacramento County',     1324110,    181.76],
+        // ['San Benito County',     1324110,    181.76],
+        // ['San Bernardino County',     1324110,    181.76],
+        // ['San Diego County',     1324110,    181.76],
+        // ['San Francisco',     1324110,    181.76],
+        // ['San Joaquin County',     1324110,    181.76],
+        // ['San Luis Obispo County	',     1324110,    181.76],
+        // ['San Mateo County',     1324110,    181.76],
+        // ['Santa Barbara County',     1324110,    181.76],
+        // ['Santa Clara County	',     1324110,    181.76],
+        // ['Santa Cruz County',     1324110,    181.76],
+        // ['Shasta County',     1324110,    181.76],
+        // ['Sierra County',     1324110,    181.76],
+        // ['Siskiyou County',     1324110,    181.76],
+        // ['Solano County',     1324110,    181.76],
+        // ['Sonoma County',     1324110,    181.76],
+        // ['Stanislaus County',     1324110,    181.76],
+        // ['Sutter County',     1324110,    181.76],
+        // ['Tehama County',     1324110,    181.76],
+        // ['Trinity County',     1324110,    181.76],
+        // ['Tulare County',     1324110,    181.76],
+        // ['Tuolumne County',     1324110,    181.76],
+        // ['Ventura County',     1324110,    181.76],
+        // ['Yolo County',     1324110,    181.76],
+        // ['Yuba County',     1324110,    181.76]
+
+
+      ]);
+
+      var options = {
+        region: 'US-CA',
+        displayMode: 'markers',
+        resolution: 'provinces',
+        markerOpacity: 0.5,
+        colorAxis: {colors: ['blue', 'red' ]}
+      };
+
+      var chart = new google.visualization.GeoChart(document.getElementById('chart_div'));
+      chart.draw(data, options);
+    };
+    </script>
+
+    
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDL0sPhoIQ-w6JtRXkZiIwc2izy2m26cPE"></script> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Factsolotl</title>
   </head>
