hard coded data for the map

--- a/public/index.html
+++ b/public/index.html
@@ -24,66 +24,64 @@
       function drawMarkersMap() {
       var data = google.visualization.arrayToDataTable([
         ['County',   'Exceedances'],
-        ['Alameda County',      2761477],
-        // ['Alpine County',     1324110,    181.76],
-        // ['Amador County',     1324110,    181.76],
-        // ['Butte County',     1324110,    181.76],
-        // ['Calaveras County',     1324110,    181.76],
-        // ['Colusa County	',     1324110,    181.76],
-        // ['Contra Costa County',     1324110,    181.76],
-        // ['Del Norte County',     1324110,    181.76],
-        // ['El Dorado County',     1324110,    181.76],
-        // ['Fresno County',     1324110,    181.76],
-        // ['Glenn County',     1324110,    181.76],
-        // ['Humboldt County',     1324110,    181.76],
-        // ['Imperial County',     1324110,    181.76],
-        // ['Inyo County',     1324110,    181.76],
-        // ['Kern County	',     1324110,    181.76],
-        // ['Kings County',     1324110,    181.76],
-        // ['Lake County',     1324110,    181.76],
-        // ['Lassen County',     1324110,    181.76],
-        // ['Los Angeles County',     1324110,    181.76],
-        // ['Madera County',     1324110,    181.76],
-        // ['Marin County',     1324110,    181.76],
-        // ['Mariposa County',     1324110,    181.76],
-        // ['Mendocino County',     1324110,    181.76],
-        // ['Merced County',     1324110,    181.76],
-        // ['Modoc County',     1324110,    181.76],
-        // ['Mono County	',     1324110,    181.76],
-        // ['Monterey County',     1324110,    181.76],
-        // ['Napa County',     1324110,    181.76],
-        // ['Nevada County',     1324110,    181.76],
-        // ['Orange County',     1324110,    181.76],
-        // ['Placer County',     1324110,    181.76],
-        // ['Plumas County',     1324110,    181.76],
-        // ['Riverside County',     1324110,    181.76],
-        // ['Sacramento County',     1324110,    181.76],
-        // ['San Benito County',     1324110,    181.76],
-        // ['San Bernardino County',     1324110,    181.76],
-        // ['San Diego County',     1324110,    181.76],
-        // ['San Francisco',     1324110,    181.76],
-        // ['San Joaquin County',     1324110,    181.76],
-        // ['San Luis Obispo County	',     1324110,    181.76],
-        // ['San Mateo County',     1324110,    181.76],
-        // ['Santa Barbara County',     1324110,    181.76],
-        // ['Santa Clara County	',     1324110,    181.76],
-        // ['Santa Cruz County',     1324110,    181.76],
-        // ['Shasta County',     1324110,    181.76],
-        // ['Sierra County',     1324110,    181.76],
-        // ['Siskiyou County',     1324110,    181.76],
-        // ['Solano County',     1324110,    181.76],
-        // ['Sonoma County',     1324110,    181.76],
-        // ['Stanislaus County',     1324110,    181.76],
-        // ['Sutter County',     1324110,    181.76],
-        // ['Tehama County',     1324110,    181.76],
-        // ['Trinity County',     1324110,    181.76],
-        // ['Tulare County',     1324110,    181.76],
-        // ['Tuolumne County',     1324110,    181.76],
-        // ['Ventura County',     1324110,    181.76],
-        // ['Yolo County',     1324110,    181.76],
-        // ['Yuba County',     1324110,    181.76]
-
-
+        ['Alameda County',      63],
+        ['Alpine County',     1],
+        ['Amador County',     2],
+        ['Butte County',     2],
+        ['Calaveras County',     3],
+        ['Colusa County	',     0],
+        ['Contra Costa County',     11],
+        ['Del Norte County',     0],
+        ['El Dorado County',     5],
+        ['Fresno County',     17],
+        ['Glenn County',     1],
+        ['Humboldt County',     4],
+        ['Imperial County',     7],
+        ['Inyo County',     1],
+        ['Kern County	',     12],
+        ['Kings County',     21],
+        ['Lake County',     8],
+        ['Lassen County',     0],
+        ['Los Angeles County',     45],
+        ['Madera County',     4],
+        ['Marin County',     2],
+        ['Mariposa County',     0],
+        ['Mendocino County',     2],
+        ['Merced County',     1],
+        ['Modoc County',     0],
+        ['Mono County	',     0],
+        ['Monterey County',     1],
+        ['Napa County',     3],
+        ['Nevada County',     7],
+        ['Orange County',     17],
+        ['Placer County',     13],
+        ['Plumas County',     1],
+        ['Riverside County',     17],
+        ['Sacramento County',     15],
+        ['San Benito County',     1],
+        ['San Bernardino County',     27],
+        ['San Diego County',     17],
+        ['San Francisco',     18],
+        ['San Joaquin County',     12],
+        ['San Luis Obispo County	',     6],
+        ['San Mateo County',     11],
+        ['Santa Barbara County',     3],
+        ['Santa Clara County	',     29],
+        ['Santa Cruz County',     2],
+        ['Shasta County',     5],
+        ['Sierra County',     13],
+        ['Siskiyou County',     7],
+        ['Solano County',     7],
+        ['Sonoma County',     0],
+        ['Stanislaus County',     8],
+        ['Sutter County',     1],
+        ['Tehama County',     0],
+        ['Trinity County',     2],
+        ['Tulare County',     7],
+        ['Tuolumne County',     1],
+        ['Ventura County',     6],
+        ['Yolo County',     4],
+        ['Yuba County',     0]
       ]);
 
       var options = {
@@ -91,7 +89,7 @@
         displayMode: 'markers',
         resolution: 'provinces',
         markerOpacity: 0.5,
-        colorAxis: {colors: ['blue', 'red' ]}
+        colorAxis: {colors: ['green', 'yellow', 'orange', 'red' ]},
       };
 
       var chart = new google.visualization.GeoChart(document.getElementById('chart_div'));
