--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lilita+One|Public+Sans&display=swap" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,800&display=swap" rel="stylesheet">
+
     <script type='text/javascript' src='https://www.gstatic.com/charts/loader.js'></script>
 
     <script type='text/javascript'>
@@ -88,13 +90,12 @@
         region: 'US-CA',
         displayMode: 'markers',
         resolution: 'provinces',
-        markerOpacity: 0.5,
+        markerOpacity: 0.7,
         colorAxis: {colors: ['green', 'yellow', 'orange', 'red' ]},
-        datalessRegionColor: 'transparent',
+        datalessRegionColor: 'white',
         backgroundColor: {
           fill:'transparent',
-          stroke: 'black',
-          strokeWidth: '50px'},
+        },
         legend: 'none'
       };
 
